--- a/glide.yaml
+++ b/glide.yaml
@@ -2,6 +2,13 @@ package: .
 import:
 - package: github.com/preichenberger/go-coinbase-exchange
   version: ^0.2.4
-- package: github.com/sirupsen/logrus
+- package: github.com/Sirupsen/logrus
 - package: github.com/gorilla/websocket
   version: ^1.1.0
+- package: gopkg.in/gorethink/gorethink.v3
+  version: ^3.0.2
+- package: github.com/cenkalti/backoff
+  version: ^1.0.0
+- package: github.com/jessevdk/go-flags
+  version: ^1.2.0
+- package: github.com/spf13/cobra
