--- a/glide.yaml
+++ b/glide.yaml
@@ -17,3 +17,5 @@ import:
 - package: github.com/x-cray/logrus-prefixed-formatter
   version: ^0.4.0
 - package: github.com/a-h/round
+- package: github.com/google/uuid
+  version: ^0.2.0
